--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -320,8 +320,14 @@ img {
 }
 
 
-/* Active link */
+/* Local ativo da página */
+.active-link{
+    color: var(--white-color);
+}
 
+.active-link::after{
+    width: 25%;
+}
 
 /*=============== HOME ===============*/
 .home__container{
@@ -956,17 +962,89 @@ img {
     background-color: var(--first-color);
 }
 
+.contact__message{
+    color: var(--white-color);
+    font-size: var(--small-font-size);
+    position: absolute;
+    bottom: -1.6rem;
+    left: 0;
+
+}
+
 /*=============== FOOTER ===============*/
+.footer{
+    background-color: var(--black-color);
+}
 
+.footer__container{
+    padding-block: 3rem 2rem;
+    row-gap: 2.5rem;
+}
 
-/*=============== SCROLL BAR ===============*/
+.footer__links{
+    display: flex;
+    justify-content: center;
+    column-gap: 2rem;
+}
 
+.footer__link{
+    color: var(--white-color);
+    transition: color .4s;
+}
 
-/*=============== SCROLL UP ===============*/
+.footer__link:hover{
+    color: var(--text-color-light);
+}
 
+.footer__copy{
+    color: var(--text-color-light);
+    font-size: var(--small-font-size);
+    text-align: center;
+}
 
-/* Show Scroll Up */
+.footer__copy a{
+    color: var(--white-color);
+    font-weight: var(--font-medium);
+}
 
+/*=============== Barra de rolagem ===============*/
+::-webkit-scrollbar{
+    width: .6rem;
+    border-radius: .5rem;
+    background-color: hsl(0, 0%, 65%);
+}
+
+::-webkit-scrollbar-thumb{
+    border-radius: .5rem;
+    background-color: hsl(0, 0%, 55%);
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background-color: hsl(0, 0%, 45%);
+}
+
+/*=============== Rolagem para cima ===============*/
+.scrollup{
+    position: fixed;
+    right: 1rem;
+    bottom: -50%;
+    background-color: var(--black-color);
+    display: inline-flex;
+    padding: 8px;
+    font-size: 1.25rem;
+    color: var(--white-color);
+    z-index: var(--z-tooltip);
+    transition: bottom .4s, transform .4s, background-color .4s;
+}
+
+.scrollup:hover{
+    transform: translateY(-.5rem);
+}
+
+/* Mostrar a função da rolagem */
+.show-scroll{
+    bottom: 3rem;
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
