--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -680,6 +680,85 @@ body.dark-theme{
     column-gap: 1rem;
 }
 
+/*=============== Habilidades ===============*/
+.about__item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: .5rem;
+    font-size: var(--h3-font-size);
+    font-weight: var(--header-height);
+    margin-bottom: 2.5rem;
+}
+
+.skills__info{
+    display: grid;
+    row-gap: 3.5rem;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.5rem 2rem;
+}
+
+.skills__data{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+.skills__blob{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 100px;
+    background-color: var(--body-color);
+    border-radius: 0.1rem;
+    place-items: center;
+    margin-bottom: 1rem;
+    border-radius: 3rem;
+    transition: background-color .4s;
+}
+
+.skills__blob img{
+    width: 50px;
+    margin: 0 auto;
+    object-fit: contain;
+}
+
+.skills__name{
+    font-size:  var(--small-font-size);
+    margin-bottom: .25rem;
+}
+
+.skills__subtitle{
+    font-size: var(--smaller-font-size);
+}
+
+/*=============== Animação Habilidades ===============*/
+.skills__blob:hover img{
+    animation: bounce-skills .6s;
+}
+
+@keyframes bounce-skills{
+    0%{
+        transform: translate(0);
+    }
+    20%{
+        transform: translateY(-6px);
+    }
+    40%{
+        transform: translate(0);
+    }
+    60%{
+        transform: translateY(-3px);
+    }
+    80%{
+        transform: translate(0);
+    }
+}
+
+
 
 /*=============== Serviços ===============*/
 .services__container{
@@ -1367,7 +1446,7 @@ body.dark-theme{
         grid-template-columns: 440px 525px;
         gap: 1rem 9rem;
         align-items: center;
-        padding-block: 9rem;
+        padding-block: 2rem;
     }
     .about__perfil{
         order: -1;
@@ -1409,7 +1488,7 @@ body.dark-theme{
         padding-left: 3rem;
     }
     .about__description{
-        font-size: var(--h2-font-size);
+        font-size: var(--h3-font-size);
         margin-bottom: 2rem;
     }
     .about__description::after{
@@ -1418,11 +1497,11 @@ body.dark-theme{
         left: -3rem;
         top: 14px;
     }
+    .skills__info{
+        grid-template-columns: repeat(4, 1fr);
+    }
     .about__list{
         margin-bottom: 5rem;
-    }
-    .about__buttons{
-        justify-content: initial;
     }
     .button__ghost{
         padding: .75rem;
